@startuml chess_class_diagram
skinparam classAttributeIconSize 0
skinparam ArrowColor #444444
skinparam ClassBorderColor #555555
skinparam ClassBackgroundColor #FAFAFA
skinparam linetype ortho

title Шахматы — диаграмма классов

enum Color {
    White
    Black
    None
}

enum PieceType {
    King
    Queen
    Rook
    Bishop
    Knight
    Pawn
}

abstract class Figure {
    # color    : Color
    # type     : PieceType
    # hasMoved : bool
    --
    + getColor()    : Color
    + getType()     : PieceType
    + getHasMoved() : bool
    + setHasMoved(v : bool) : void
    ..
    + {abstract} getSymbol() : char
    + {abstract} clone() : Figure*
    + {abstract} getMaterialValue() : int
    + {abstract} getPositionalValue(row, col) : int
    + {abstract} getPseudoMoves(r, c, t) : vector<Position>
    ..
    + {static} create(t : PieceType, c : Color) : Figure*
}

class King   {}
class Queen  {}
class Rook   {}
class Bishop {}
class Knight {}
class Pawn   {}

Figure <|-- King
Figure <|-- Queen
Figure <|-- Rook
Figure <|-- Bishop
Figure <|-- Knight
Figure <|-- Pawn

class Cell {
    - row    : int
    - col    : int
    - figure : Figure*
    --
    + getFigure() : Figure*
    + setFigure(f : Figure*) : void
    + isEmpty()   : bool
}

note right of Cell
  Хранит указатель на фигуру.
  Память управляет Table:
  delete вызывается в removePieceAt
  и деструкторе Table.
end note

Cell "0..1" *-- Figure : владеет

class Table {
    - cells[8][8]     : Cell
    - currentTurn     : Color
    - enPassantTarget : Position
    - gameOver        : bool
    - winner          : Color
    - isDraw          : bool
    --
    + initialize() : void
    + display() : void
    + makeMove(fr,fc,tr,tc) : bool
    + getValidMoves(r,c) : vector<Position>
    + isInCheck(color) : bool
    + isSquareAttacked(r,c,by) : bool
    + clearBoard() : void
    + placePiece(t,c,r,c) : void
    + getCurrentTurn() : Color
    + isGameOver() : bool
    + getWinner() : Color
    + getIsDraw() : bool
}

note right of Table
  Владение фигурами через cells[8][8].
  Нет отдельных векторов pieces/captured.
  Взятие: removePieceAt = O(1) delete.
  Копирование: 64 clone(), не более.
end note

Table *-- "64" Cell : содержит

class Move <<struct>> {
    + fr : int
    + fc : int
    + tr : int
    + tc : int
    + promotion : char
}

class AI {
    - searchDepth : int
    --
    + AI(depth : int)
    + getBestMove(board : Table, color : Color) : Move
    --
    - minimax(t, depth, alpha, beta) : int
    - {static} evaluate(t : Table) : int
    - {static} collectMoves(t, color) : vector<Move>
}

class MateSearcher {
    --
    + {static} loadPosition(table, filename) : bool
    + {static} findMatingMove(board, maxDepth) : Move
    + {static} solvePuzzle(inFile, outFile) : int
    --
    - {static} mateIn1(t, out) : bool
    - {static} mateIn2(t, out) : bool
}

AI          ..> Table : читает / копирует
AI          ..> Move  : возвращает
MateSearcher ..> Table : читает / копирует
MateSearcher ..> Move  : использует

@enduml
